# feedcraft

./: .gitignore  README.md  justfile  main.py  pyproject.toml
feedcraft/: rss.py
feedmodels/: rss_20.py  rss_20_test.py  rss_test.py
